# tendermint-lc-plonky2

./: .gitignore  Cargo.toml  README.md  cp.py  create_central_chain_config.py
dump_inputs/: last_inputs.json
log/: tendermint_lc_plonky2.log.2024-03-26  tendermint_lc_plonky2.log.2024-03-27  tendermint_lc_plonky2.log.2024-04-01  tendermint_lc_plonky2.log.2024-04-04
tendermint-lc-plonky2/: Cargo.toml
tendermint-lc-plonky2/dump_inputs/: last_inputs.json
tendermint-lc-plonky2/src/: circuit.rs  circuit_builder.rs  config_data.rs  connect.rs  constants.rs  input_types.rs  lib.rs  logger.rs  main.rs  merkle_targets.rs  merkle_tree_gadget.rs  native.rs  rpc.rs  serializer.rs  sign_messages.rs  targets.rs  test_data.rs  test_heights.rs  test_utils.rs  unit_tests.rs  update_validity.rs  utils.rs
tendermint-lc-plonky2/src/chain_config/: AKASH.yaml  ARCHWAY.yaml  ASSETMANTLE.yaml  AXELAR.yaml  BITCANNA.yaml  BITSONG.yaml  CANTO.yaml  CELESTIA.yaml  CHIHUAHUA.yaml  COMDEX.yaml  COSMOSHUB.yaml  CRONOS.yaml  DESMOS.yaml  DYDX.yaml  EMONEY.yaml  EVMOS.yaml  FETCHHUB.yaml  FINSCHIA.yaml  GOVGEN.yaml  GRAVITYBRIDGE.yaml  HUMANS.yaml  INJECTIVE.yaml  IRISNET.yaml  JUNO.yaml  KAVA.yaml  KICHAIN.yaml  LIKECOIN.yaml  LUMNETWORK.yaml  NEUTRON.yaml  NIBIRU.yaml  NOBLE.yaml  NYX.yaml  OMNIFLIXHUB.yaml  ONOMY.yaml  OSMOSIS.yaml  PASSAGE.yaml  PERSISTENCE.yaml  PROVENANCE.yaml  QUASAR.yaml  QUICKSILVER.yaml  (+20 more)
tendermint-lc-plonky2/src/circuits/: checks.rs  connect.rs  indices.rs  main.rs  merkle_targets.rs  mod.rs  sign_messages.rs  tendermint.rs  validators_hash.rs  validators_quorum.rs
tendermint-lc-plonky2/src/test_data/: 12255075_12269475_v2.json  12946557_12975357.json  12960957_12975357.json  12960957_12975357_v2.json  12960957_12975357_v2_old.json  12960957_12975357_v2_test.json  15369999_15384399_v2.json  2732194_2751394_v2.json  3279207_3293607_v2.json  data.json  dummy_data.json  untrusted_validator_leaves.json
tendermint-lc-plonky2/src/tests/: mod.rs  test_heights.rs  test_utils.rs  unit_tests.rs
tendermint-lc-plonky2/src/tests/test_data/: 12404588_12405588.json  12960957_12975357.json  12960957_12975357_v2.json  13110390_13110790_v2.json  2557871_2573300_v2.json  60319429_60427429_v2.json  765797_771557.json  765797_771557_v2.json  8411557_8414437_v2.json  test_inputs_data_14627326.json
