[package]
name = "tendermint-lc-plonky2"
version = "0.1.0"
edition = "2021"

[dependencies]
# plonky2 = "0.1.4"
# plonky2 = { git = "https://github.com/Electron-Labs/plonky2", branch = "feat/PoseidonBn254Goldilocks"}
plonky2 = { git = "https://github.com/Electron-Labs/plonky2", branch = "derive_bn254_from_ff" }
num = "0.4.1"
serde_json = "1.0.74"
serde = { version = "1.0", features = ["derive"] }
plonky2_crypto = { git = "https://github.com/Electron-Labs/plonky2-crypto" }
bitvec = "1.0.1"
tendermint = "0.34.0"
tendermint-rpc = { version = "0.34.0", features = ["http-client"] }
tendermint-proto = "0.34.0"
tokio = "1.35.1"
ct-merkle = "0.1.0"
sha2 = { version = "0.10.6" }
plonky2_ed25519 = { git = "https://github.com/Electron-Labs/plonky2_ed25519" }
log = { version = "0.4.14", default-features = false }
env_logger = { version = "0.9.0", default-features = false }
plonky2-circuit-serializer = { git = "https://github.com/Electron-Labs/plonky2-circuit-serializer" }
