[package]
name = "tendermint-lc-plonky2"
version = "0.1.0"
edition = "2021"

[dependencies]
# plonky2 = "0.1.4"
# plonky2 = { git = "https://github.com/Electron-Labs/plonky2", branch = "feat/PoseidonBn254Goldilocks"}
plonky2 = { git = "https://github.com/Electron-Labs/plonky2", branch = "derive_bn254_from_ff" }
num = "0.4.1"
serde_json = "1.0.74"
serde = { version = "1.0", features = ["derive"] }
plonky2_crypto = { git = "https://github.com/Electron-Labs/plonky2-crypto" }
bitvec = "1.0.1"
tendermint = "0.34.0"
tendermint-rpc = { version = "0.34.0", features = ["http-client"] }
tendermint-proto = "0.34.0"
ct-merkle = "0.1.0"
sha2 = { version = "0.10.6" }
plonky2_ed25519 = { git = "https://github.com/Electron-Labs/plonky2_ed25519" }
log = { version = "0.4.14", default-features = false }
env_logger = { version = "0.9.0", default-features = false }
plonky2-circuit-serializer = { git = "https://github.com/Electron-Labs/plonky2-circuit-serializer", branch = "dev"}
dotenv = "0.15.0"
serde_yaml = "0.9.31"
lazy_static = "1.4.0"
tokio = "1.36.0"
tracing = "0.1.40"
tracing-subscriber = {version = "0.3.18", features = ["default", "json"] }
tracing-appender = "0.2.3"
tracing-test = "0.2.4"